<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="jEK-VM-QoN">
    <device id="retina4_7" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Tabbar Controller-->
        <scene sceneID="pXd-TA-ENi">
            <objects>
                <tabBarController storyboardIdentifier="TabbarController" id="jEK-VM-QoN" customClass="TabbarController" customModule="Canoodle" customModuleProvider="target" sceneMemberID="viewController">
                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="G22-SP-eCT">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <color key="selectedImageTintColor" name="AppColor"/>
                    </tabBar>
                    <connections>
                        <segue destination="VlB-eO-YIF" kind="relationship" relationship="viewControllers" id="KZc-Lw-1eV"/>
                        <segue destination="bs7-gX-Zvf" kind="relationship" relationship="viewControllers" id="b3t-5S-uzA"/>
                        <segue destination="pzQ-oB-4Qy" kind="relationship" relationship="viewControllers" id="vM2-wM-wfm"/>
                        <segue destination="1px-Th-xv1" kind="relationship" relationship="viewControllers" id="FM8-t9-LI2"/>
                        <segue destination="Wrb-fm-mH3" kind="relationship" relationship="viewControllers" id="Ag5-je-Ggh"/>
                    </connections>
                </tabBarController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="oNP-QN-SUz" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-607" y="-224"/>
        </scene>
        <!--Home-->
        <scene sceneID="8Zl-Ze-PNB">
            <objects>
                <viewControllerPlaceholder storyboardName="Home" id="VlB-eO-YIF" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Home" id="tsA-2B-xjN"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="hKx-IZ-jcx" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="368" y="-428"/>
        </scene>
        <!--Canoodle-->
        <scene sceneID="cri-bq-88S">
            <objects>
                <viewControllerPlaceholder storyboardName="Canoodle" id="bs7-gX-Zvf" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Canoodle" id="SCT-5K-Et6"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="0i0-lu-K28" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="368" y="-332"/>
        </scene>
        <!--MyProfile-->
        <scene sceneID="NVm-TK-ngf">
            <objects>
                <viewControllerPlaceholder storyboardName="MyProfile" id="1px-Th-xv1" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="My Profile" id="ddq-cx-Olz"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="BN1-2p-CPS" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="368" y="-126"/>
        </scene>
        <!--Like-->
        <scene sceneID="Fxx-QP-K4B">
            <objects>
                <viewControllerPlaceholder storyboardName="Like" id="pzQ-oB-4Qy" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Like" image="Like" id="vlX-2G-Zen"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="K5b-nk-jk9" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="366" y="-225"/>
        </scene>
        <!--Messages-->
        <scene sceneID="Ydp-OT-xoH">
            <objects>
                <viewControllerPlaceholder storyboardName="Messages" id="Wrb-fm-mH3" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Settings" id="0J8-73-VLC"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="cJO-tu-iOO" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="379" y="-23"/>
        </scene>
    </scenes>
    <resources>
        <image name="Like" width="26" height="24"/>
        <namedColor name="AppColor">
            <color red="0.40784313725490196" green="0.22745098039215686" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
    </resources>
</document>
