...
            self.viewLogs.isHidden = false
        }
        else if(AppConstants.isDebug == false){
            self.viewLogs.isHidden = true
        }
        viewblank.isHidden = AppConstants.isLoginSkipped
        if notificationOn == "Yes" {
            btnSwitch.isOn = true
        } else {
            btnSwitch.isOn = false
        }
    }
    
...
        let cancelAction = UIAlertAction(title: "Cancel", style: .cancel) { (_) in
            
        }
        
        alertController.addAction(cancelAction)
        
        let OKAction = UIAlertAction(title: "Buy for $1.99", style: .default) { (_) in
            if Platform.isSimulator {
                let aModel = UserDefaultsManager.getLoggedUserDetails()
                aModel?.purchaseStatus = "Yes"
                UserDefaultsManager.setLoggedUserDetails(userDetail: aModel!)
                self.viewAddFree.isHidden = true
                self.showTopMessage(message: "Ads are removed successfully.", type: .Success)
...
