...
    class func instance() -> OnboardingViewController? {
        return StoryBoard.Onboarding.board.instantiateViewController(withIdentifier: AppClass.OnboardingVC.rawValue) as? OnboardingViewController
    }

    
    @IBAction func doneButtonTapped(_ sender: Any) {
        UserDefaultsManager.onboardingDone = "Yes"
        GlobalUtility.redirectToLogin()
    }
    
    /*
    // MARK: - Navigation

...
